# Allegro_Digit

./: README.md  actions.npy
src/: CMakeLists.txt
src/allegro_hand/: CMakeLists.txt  package.xml  setup.py
src/allegro_hand/include/allegro_hand/: allegro_hand_joint_pd.h  allegro_hand_sim.h  desired_joint_state_pub.h
src/allegro_hand/launch/: allegro_hand.launch  collectData.launch
src/allegro_hand/scripts/: Kinematics.py  actionSampler.py  actionSampler_pitch.py  actionSampler_roll.py  collectData.py  collectData_pitch.py  collectData_roll.py  plotPose.py  poseExperiment.py  predictionExperiment.py  predictionExperimentAngle.py  processData.py  runController.py
src/allegro_hand/src/: allegro_hand_joint_pd.cpp  allegro_hand_node.cpp  allegro_hand_sim.cpp  desired_joint_state_pub.cpp
src/allegro_hand/src/allegro_hand/: Kinematics.py  actionSampler.py
src/allegro_hand_controllers/: CMakeLists.txt
src/allegro_hand_controllers/launch/: allegro_hand.launch
src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node_grasp.cpp  allegro_node_pd.cpp  allegro_node_sim.cpp  allegro_node_torque.cpp  allegro_node_velsat.cpp
src/allegro_hand_description/: allegro_hand_description_right.xacro
src/allegro_hand_parameters/: gains_pd.yaml
src/digit/: CMakeLists.txt  package.xml  setup.py
src/digit/data/: digit_nn_normalized.npz  digit_nn_normalized.pth
src/digit/launch/: digit.launch
src/digit/scripts/: digit_sensor_pub.py
src/digit/src/digit/: pose_estimation.py
